# venueflow-skipline

./: .gitignore  IMPROVEMENTS.md  README.md  render.yaml
backend/: build.sh  config.py  main.py  pyproject.toml  pytest.ini
backend/cv_data/: sample_counts.json
backend/groq_agent/: __init__.py  client.py  ops_assistant.py  routing_agent.py
backend/simulation/: anomaly_detector.py  engine.py  zones.py
backend/skipline/: __init__.py  notifier.py  predictor.py  wait_estimator.py
backend/tests/: __init__.py  test_anomaly_detector.py  test_engine.py  test_predictor.py  test_wait_estimator.py  test_zones.py
cv_demo/: detect.py
frontend/: package-lock.json
frontend/app/: globals.css  layout.js  page.js
frontend/app/attendee/: page.js
frontend/components/: AttendeeView.jsx  SkipLineAlert.jsx  StadiumHeatmap.jsx  StaffChat.jsx
frontend/lib/: api.js
