[project]
name = "venueflow-backend"
version = "1.0.0"
description = "VenueFlow + SkipLine — AI-powered crowd management backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "groq>=0.11.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
